[gd_scene load_steps=2 format=3 uid="uid://cxv8k3m2n1qwp"]

[ext_resource type="Script" path="res://scripts/ui/Settings.gd" id="1_settings"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_settings")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0.08, 0.08, 0.1, 0.85)

[node name="CloseBtn" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 0
offset_left = 12.0
offset_top = 12.0
offset_right = 44.0
offset_bottom = 44.0
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_colors/font_hover_color = Color(1, 0.4, 0.4, 1)
theme_override_colors/font_pressed_color = Color(1, 0.2, 0.2, 1)
theme_override_font_sizes/font_size = 20
flat = true
text = "✕"

[node name="MoveBtn" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -44.0
offset_top = 12.0
offset_right = -12.0
offset_bottom = 44.0
grow_horizontal = 0
focus_mode = 0
mouse_default_cursor_shape = 9
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_colors/font_hover_color = Color(0.7, 0.85, 1, 1)
theme_override_font_sizes/font_size = 18
flat = true
text = "✥"

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -120.0
offset_right = 150.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.95, 0.95, 1)
theme_override_font_sizes/font_size = 28
text = "SETTINGS"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="VBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="VolumeContainer" type="HBoxContainer" parent="VBox"]
layout_mode = 2
alignment = 1

[node name="VolumeLabel" type="Label" parent="VBox/VolumeContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
text = "Volume:"

[node name="VolumeSlider" type="HSlider" parent="VBox/VolumeContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
max_value = 100.0
value = 80.0

[node name="FullscreenContainer" type="HBoxContainer" parent="VBox"]
layout_mode = 2
alignment = 1

[node name="FullscreenLabel" type="Label" parent="VBox/FullscreenContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
text = "Fullscreen:"

[node name="FullscreenCheck" type="CheckBox" parent="VBox/FullscreenContainer"]
layout_mode = 2

[node name="Spacer2" type="Control" parent="VBox"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="BackBtn" type="Button" parent="VBox"]
custom_minimum_size = Vector2(150, 45)
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0.85, 0.85, 0.85, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 18
flat = true
text = "BACK"

[node name="HoverFadeTimer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true
